package ch.zhaw.www.model;

import ch.zhaw.www.service.GameError;
import ch.zhaw.www.service.PlayerError;
import jakarta.annotation.Nullable;
import jakarta.validation.constraints.NotNull;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.ToString;
import org.springframework.data.annotation.Id;
import org.springframework.data.keyvalue.annotation.KeySpace;

import java.util.*;
import java.util.stream.Stream;

/**
 * Class containing all the information related to a game.
 * It controls players in game, running rounds and prompts from the deck
 */
@ToString
@EqualsAndHashCode
@RequiredArgsConstructor
@KeySpace("running_games")
public class Game {
    @Id
    @Getter
    @NotNull
    private final String id;
    private final int minimumAmountOfPlayers;
    private final int maximumAmountOfPlayers;
    @Getter
    private final int numberOfRoundsInTurn;
    private final List<Round> rounds = new ArrayList<>();
    private final Map<String, Player> waitingRoom = new HashMap<>();
    private final Map<String, Player> activePlayers = new HashMap<>();
    private final SphinxElector sphinxElector = new SphinxElector(rounds, activePlayers);
    private final List<Prompt> prompts = List.of(new Prompt("I've always wanted to WALTER", 1));
    
    public void addRound(Round round) {
        rounds.add(round);
        final Iterator<Player> iterator = waitingRoom.values().iterator();
        iterator.forEachRemaining(player -> {
            if (activePlayers.size() < maximumAmountOfPlayers) {
                iterator.remove();
                activePlayers.put(player.getId(), player);
            }
        });
    }
    
    /**
     * Gets current round,
     * when the SphinxElector has been selected
     *
     * @return {@link Round} or null
     */
    @Nullable
    public Round getCurrentRound() {
        if (rounds.isEmpty()) {
            return null;
        } else {
            var round = rounds.get(rounds.size() - 1);
            return round.getState() != Round.State.FINISHED ? round : null;
        }
    }
    
    /**
     * Returns state of the current game:
     * - Waiting for player: Not enough players active or no valid round
     * - Waiting for propositions: Not all players did send propositions and is in time for sending any
     * - Waiting for selections: Not all players did send propositions
     *
     * @return {@link Game.State}
     */
    @NotNull
    public State getState() {
        var round = getCurrentRound();
        if (round == null) {
            return State.NO_VALID_ROUND;
        } else if (!hasEnoughPlayers() || canRoundStart(round)) {
            return State.WAITING_FOR_PLAYERS;
        } else if (round.canEnterRound() && canAcceptPropositions(round)) {
            return State.WAITING_FOR_ALL_PROPOSITIONS;
        } else if (canAcceptSelections(round) && haveAllPlayersSubmittedASelection(round)) {
            return State.WAITING_FOR_ALL_SELECTIONS;
        } else {
            return State.NO_VALID_ROUND;
        }
    }
    
    private boolean haveAllPlayersSubmittedASelection(final Round round) {
        return round.getNumberOfSelectionsSubmitted() == activePlayers.size() - 1;
    }
    
    private boolean canAcceptSelections(final Round round) {
        return round.getState() == Round.State.OPEN_FOR_SUBMISSIONS ||
                round.getState() == Round.State.OPEN_FOR_SELECTIONS;
    }
    
    private boolean hasEnoughPlayers() {
        return activePlayers.size() >= minimumAmountOfPlayers;
    }
    
    private boolean canAcceptPropositions(final Round round) {
        return round.getNumberOfPropositionsSubmitted() < activePlayers.size() &&
                round.getState() == Round.State.OPEN_FOR_SUBMISSIONS;
    }
    
    private boolean canRoundStart(final Round round) {
        return round.getState() == Round.State.CREATED;
    }
    
    public Prompt consumePrompt() {
        // uncomment when deck is implemented: return prompts.remove(0) ;
        return prompts.get(0);
    }
    
    /**
     * Returns stream of all active and waiting room players
     *
     * @return stream with all valid games
     */
    public Stream<Player> getAllPlayers() {
        List<Player> players = new ArrayList<>(waitingRoom.values());
        players.addAll(activePlayers.values());
        return players.stream();
    }
    
    /**
     * Moves players in the waiting room into the active list, if there is space in current round
     *
     * @param player player that will be marked as active
     * @throws GameError.FullCapacityException if more than maximum players reached
     */
    public void moveToActivePlayers(Player player) throws GameError.FullCapacityException {
        if (activePlayers.size() < maximumAmountOfPlayers) {
            if (getAllPlayers().noneMatch(p -> p.equals(player))) {
                throw new PlayerError.NotFoundException(id);
            }
            waitingRoom.remove(player.getId());
            activePlayers.put(player.getId(), player);
        } else {
            throw new GameError.FullCapacityException();
        }
    }
    
    /**
     * Checks if player ID is currently an active player
     *
     * @param playerId player identifier
     * @return is an active player or false if in waiting room or not existing
     */
    public boolean hasActivePlayer(@NotNull String playerId) {
        return activePlayers.containsKey(playerId);
    }
    
    /**
     * Checks if player ID is currently a player
     *
     * @param playerId player identifier
     * @return is a player either in waiting room or is active
     */
    public boolean hasPlayer(@NotNull String playerId) {
        return getAllPlayers().anyMatch(player -> player.getId().equals(playerId));
    }
    
    /**
     * Adds player to waiting room if not already active
     *
     * @param player player that shall be added
     */
    public void addPlayerToWaitingRoom(@NotNull Player player) {
        if (!hasActivePlayer(player.getId())) {
            waitingRoom.put(player.getId(), player);
            sphinxElector.addCandidate(player);
        }
    }
    
    /**
     * Removes player from waiting room or active players
     *
     * @param playerId player identifier
     * @throws PlayerError.NotFoundException if player is not in waiting room or active players
     */
    public void removePlayer(@NotNull String playerId) throws PlayerError.NotFoundException {
        if (!hasPlayer(playerId)) {
            throw new PlayerError.NotFoundException(id);
        }
        waitingRoom.remove(playerId);
        activePlayers.remove(playerId);
        sphinxElector.removeCandidate(playerId);
    }
    
    /**
     * Selects a sphinx based on in which round the players are in the turn
     *
     * @return sphinx or null
     * @throws PlayerError.NotFoundException if the sphinx is no longer an active player
     */
    public Player selectSphinx() throws PlayerError.NotFoundException {
        return sphinxElector.selectCandidate(numberOfRoundsInTurn);
    }
    
    public enum State {
        NO_VALID_ROUND, WAITING_FOR_PLAYERS, WAITING_FOR_ALL_PROPOSITIONS, WAITING_FOR_ALL_SELECTIONS
    }
}
