@startuml
skinparam class {
    BackgroundColor white
    BorderColor Black
    FontColor Black
    ArrowColor Firebrick
}
skinparam roundcorner 0
hide empty members


interface GameService {
    +selectProposition(roundId:String,  playerId:String,  propositionId:String)
}

interface GameEntityService {
    +editGameForRound(roundId: String, UnaryOperator<Game>)
}

interface EvaluationService {
    +eval(round: Round): Evaluation
}

class Game {
    -rounds: List<Round>
    +getState()
    +getCurrentRound()
    +updateResults(result: Result)
}

class Round {
    +getState()
}

class GameRepository {
    +findAll(): List<Game>
}

class GameController {
    +evalRound(game: Game): Evaluation
}


GameController ..> GameService
GameService ..> GameEntityService
GameService ..> EvalService
GameService ..> Game
GameEntityService ..> GameRepository
Game..> Round


@enduml